tests/ci/expected/0204-main-params2.error.c.expected
ci/0204-main-params2.error.c:1:21: error: invalid parameter type for 'main': second parameter must be of type 'char **'. (ยง5.1.2.2.1)
int main (int argc, void ** argv) { return 0; }
    ^               ~~~~~~~ 
